--- a/Public/index.html
+++ b/Public/index.html
@@ -15,7 +15,7 @@
             <div class="logo"><i class="fas fa-store"></i> ShopLuxe</div>
             <ul class="nav-links">
                 <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="./views/products.php"><i class="fas fa-box-open"></i> Products</a></li>
+                <li><a href="./views/products.html"><i class="fas fa-box-open"></i> Products</a></li>
                 <li><a href="./views/wishlist.html"><i class="fas fa-heart"></i> Wishlist</a></li>
                 <li><a href="./views/cart.html"><i class="fas fa-shopping-cart"></i> Cart</a></li>
                 <li><a href="./views/login.html"><i class="fas fa-user"></i> Login/Register</a></li>
