fixed the relative paths

--- a/public/html/login.html
+++ b/public/html/login.html
@@ -13,7 +13,7 @@
 <body>
     <!-- Back to Home -->
     <div class="back-home">
-        <a href="index.html"><i class="fas fa-arrow-left"></i> Back to Home</a>
+        <a href="../../index.html"><i class="fas fa-arrow-left"></i> Back to Home</a>
     </div>
     <!-- Login Container -->
     <div class="login-container">
