--- a/public/html/register.html
+++ b/public/html/register.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="../css/register.css">
 </head>
 <body>
-      <!-- Back to Home -->
-      <div class="back-home">
-        <a href="index.html"><i class="fas fa-arrow-left"></i> Back to Home</a>
+    <!-- Back to Home -->
+    <div class="back-home">
+        <a href="../../index.html"><i class="fas fa-arrow-left"></i> Back to Home</a>
     </div>
     <div class="register-container">
         <div class="register-form">
