fixed path for images

--- a/public/html/product-details/headphones.html
+++ b/public/html/product-details/headphones.html
@@ -31,7 +31,7 @@
         <div class="product-details">
             <!-- Product Image -->
             <div class="product-image">
-                <img src="../../images/headphones.webp" alt="Headphones">
+                <img src="../../images/Headphones.webp" alt="Headphones">
             </div>
 
             <!-- Product Info -->
