--- a/public/html/product-details/Ipad.html
+++ b/public/html/product-details/Ipad.html
@@ -31,7 +31,7 @@
         <div class="product-details">
             <!-- Product Image -->
             <div class="product-image">
-                <img src="../../images/ipad.webp" alt="iPad">
+                <img src="../../images/Ipad.webp" alt="iPad">
             </div>
 
             <!-- Product Info -->
