--- a/public/html/product-details/hoodie.html
+++ b/public/html/product-details/hoodie.html
@@ -31,7 +31,7 @@
         <div class="product-details">
             <!-- Product Image -->
             <div class="product-image">
-                <img src="../../images/hoodie.webp" alt="Hoodie">
+                <img src="../../images/Hoodie.webp" alt="Hoodie">
             </div>
 
             <!-- Product Info -->
