--- a/public/html/products.html
+++ b/public/html/products.html
@@ -104,7 +104,7 @@
                     <img src="../images/Bagpack.webp" alt="Backpack">
                     <h2>Backpack</h2>
                     <p>Price: $75</p>
-                    <a href="product-details/bagpack.html" class="btn">View Details</a>
+                    <a href="product-details/bagpack.html?category=home-appliances" class="btn">View Details</a>
                 </div>
                 <div class="product-card">
                     <img src="../images/Camera.webp" alt="Camera">
