fixed image path for headphones

--- a/public/html/cart.html
+++ b/public/html/cart.html
@@ -45,7 +45,7 @@
                     <button class="btn remove-btn">Remove</button>
                 </div>
                 <div class="cart-item">
-                    <img src="../images/headphones.webp" alt="Headphones">
+                    <img src="../images/Headphones.webp" alt="Headphones">
                     <div class="item-details">
                         <h2>Headphones</h2>
                         <p>Price: $300</p>
