--- a/public/html/product-details/hoodie.html
+++ b/public/html/product-details/hoodie.html
@@ -13,11 +13,11 @@
         <nav>
             <div class="logo"><i class="fas fa-store"></i> ShopLuxe</div>
             <ul class="nav-links">
-                <li><a href="../../../index.html"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="../products.html"><i class="fas fa-box-open"></i> Products</a></li>
+                <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="/html/products.html"><i class="fas fa-box-open"></i> Products</a></li>
                 <li><a href="../wishlist.html"><i class="fas fa-heart"></i> Wishlist</a></li>
                 <li><a href="../cart.html"><i class="fas fa-shopping-cart"></i> Cart</a></li>
-                <li><a href="../login.html"><i class="fas fa-user"></i> Login/Register</a></li>
+                <li id="auth-link"><a href="html/login.html"><i class="fas fa-user"></i> Login/Register</a></li>
             </ul>
         </nav>
     </header>
@@ -78,5 +78,7 @@
 
     <!-- Include the external JavaScript file -->
 <script src="../../js/product-details.js"></script>
+<script src="../../js/nav.js" defer></script>
+
 </body>
 </html>
