--- a/public/html/products.html
+++ b/public/html/products.html
@@ -14,11 +14,11 @@
         <nav>
             <div class="logo"><i class="fas fa-store"></i> ShopLuxe</div>
             <ul class="nav-links">
-                <li><a href="../../index.html"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="products.html" class="active"><i class="fas fa-box-open"></i> Products</a></li>
-                <li><a href="wishlist.html"><i class="fas fa-heart"></i> Wishlist</a></li>
-                <li><a href="cart.html"><i class="fas fa-shopping-cart"></i> Cart</a></li>
-                <li><a href="login.html"><i class="fas fa-user"></i> Login/Register</a></li>
+                <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="/html/products.html" class="active"><i class="fas fa-box-open"></i> Products</a></li>
+                <li><a href="/html/wishlist.html"><i class="fas fa-heart"></i> Wishlist</a></li>
+                <li><a href="/html/cart.html"><i class="fas fa-shopping-cart"></i> Cart</a></li>
+                <li id="auth-link"><a href="html/login.html"><i class="fas fa-user"></i> Login/Register</a></li>
             </ul>
         </nav>
     </header>
@@ -42,59 +42,59 @@
                     <img src="../images/laptop.webp" alt="Laptop">
                     <h2>Laptop</h2>
                     <p>Price: $1000</p>
-                    <a href="product-details/laptop.html?category=electronics" class="btn">View Details</a>
+                    <a href="/html/product-details/laptop.html?productId=1&category=electronics" class="btn">View Details</a>
                 </div>
                 <div class="product-card">
-                    <img src="../images/Headphones.webp" alt="Headphones">
+                    <img src="../images/headphones.webp" alt="Headphones">
                     <h2>Headphones</h2>
                     <p>Price: $300</p>
-                    <a href="product-details/headphones.html?category=electronics" class="btn">View Details</a>
+                    <a href="/html/product-details/headphones.html?productId=2&category=electronics" class="btn">View Details</a>
                 </div>
                 <div class="product-card">
                     <img src="../images/Ipad.webp" alt="Tablet">
                     <h2>Ipad</h2>
                     <p>Price: $400</p>
-                    <a href="product-details/Ipad.html?category=electronics" class="btn">View Details</a>
+                    <a href="/html/product-details/ipad.html?productId=3&category=electronics" class="btn">View Details</a>
                 </div>
                 <div class="product-card">
                     <img src="../images/Phone.webp" alt="Smartphone">
                     <h2>Smartphone</h2>
                     <p>Price: $800</p>
-                    <a href="product-details/Phone.html?category=electronics" class="btn">View Details</a>
+                    <a href="/html/product-details/phone.html?productId=4&category=electronics" class="btn">View Details</a>
                 </div>
                 <div class="product-card">
                     <img src="../images/smartwatch.webp" alt="Smartwatch">
                     <h2>Smartwatch</h2>
                     <p>Price: $150</p>
-                    <a href="product-details/smartwatch.html?category=electronics" class="btn">View Details</a>
+                    <a href="/html/product-details/smartwatch.html?productId=5&category=electronics" class="btn">View Details</a>
                 </div>
             </div>
 
             <!-- Fashion -->
             <div class="product-category fashion">
                 <div class="product-card">
-                    <img src="../images/Hoodie.webp" alt="Hoodie">
+                    <img src="../images/hoodie.webp" alt="Hoodie">
                     <h2>Hoodie</h2>
                     <p>Price: $50</p>
-                    <a href="product-details/hoodie.html?category=fashion" class="btn">View Details</a>
+                    <a href="/html/product-details/hoodie.html?productId=6&category=fashion" class="btn">View Details</a>
                 </div>
                 <div class="product-card">
                     <img src="../images/Sneakers.webp" alt="Shoes">
                     <h2>Sneakers</h2>
                     <p>Price: $120</p>
-                    <a href="product-details/Sneakers.html?category=fashion" class="btn">View Details</a>
+                    <a href="/html/product-details/sneakers.html?productId=7&category=fashion" class="btn">View Details</a>
                 </div>
                 <div class="product-card">
-                    <img src="../images/Jacket.webp" alt="Jacket">
+                    <img src="../images/jacket.webp" alt="Jacket">
                     <h2>Jacket</h2>
                     <p>Price: $200</p>
-                    <a href="product-details/Jacket.html?category=fashion" class="btn">View Details</a>
+                    <a href="/html/product-details/Jacket.html?productId=8&category=fashion" class="btn">View Details</a>
                 </div>
                 <div class="product-card">
                     <img src="../images/Sunglasses.webp" alt="Sunglasses">
                     <h2>Sunglasses</h2>
                     <p>Price: $100</p>
-                    <a href="product-details/Sunglasses.html?category=fashion" class="btn">View Details</a>
+                    <a href="/html/product-details/sunglasses.html?productId=9&category=fashion" class="btn">View Details</a>
                 </div>
             </div>
 
@@ -104,19 +104,19 @@
                     <img src="../images/Bagpack.webp" alt="Backpack">
                     <h2>Backpack</h2>
                     <p>Price: $75</p>
-                    <a href="product-details/bagpack.html?category=home-appliances" class="btn">View Details</a>
+                    <a href="/html/product-details/bagpack.html?productId=10&category=home-appliances" class="btn">View Details</a>
                 </div>
                 <div class="product-card">
                     <img src="../images/Camera.webp" alt="Camera">
                     <h2>Camera</h2>
                     <p>Price: $500</p>
-                    <a href="product-details/camera.html?category=home-appliances" class="btn">View Details</a>
+                    <a href="/html/product-details/camera.html?productId=11&category=home-appliances" class="btn">View Details</a>
                 </div>
                 <div class="product-card">
                     <img src="../images/water-bottle.webp" alt="Water Bottle">
                     <h2>Water Bottle</h2>
                     <p>Price: $25</p>
-                    <a href="product-details/water-bottle.html?category=home-appliances" class="btn">View Details</a>
+                    <a href="/html/product-details/water-bottle.html?productId=12&category=home-appliances" class="btn">View Details</a>
                 </div>
             </div>
         </div>
@@ -129,5 +129,6 @@
 
     <!-- JavaScript -->
     <script src="../js/products.js"></script>
+    <script src="../js/nav.js" defer></script> <!-- Include nav.js -->
 </body>
 </html>
