--- a/public/html/register.html
+++ b/public/html/register.html
@@ -11,29 +11,15 @@
 <body>
     <!-- Back to Home -->
     <div class="back-home">
-        <a href="../../index.html"><i class="fas fa-arrow-left"></i> Back to Home</a>
+        <a href="/" class="btn"><i class="fas fa-arrow-left"></i> Back to Home</a>
     </div>
     <div class="register-container">
         <div class="register-form">
             <h1>Create an Account</h1>
-            <form action="#" method="post">
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" placeholder="Enter your email" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" name="password" placeholder="Enter your password" required>
-                </div>
-                <div class="form-group">
-                    <label for="confirm-password">Confirm Password</label>
-                    <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm your password" required>
-                </div>
-                <div class="form-group">
-                    <label for="phone">Phone Number</label>
-                    <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required>
-                </div>
-                <button type="submit" class="btn">Register</button>
+            <form action="http://localhost:3000/auth/register" method="post">
+                <input type="email" name="email" placeholder="Email" required>
+                <input type="password" name="password" placeholder="Password" required>
+                <button type="submit">Register</button>
             </form>
             <p>Already have an account? <a href="login.html">Login here</a></p>
         </div>
