--- a/public/html/index.html
+++ b/public/html/index.html
@@ -86,9 +86,9 @@
     <footer>
         <p>&copy; 2024 ShopLuxe. All Rights Reserved.</p>
         <div class="socials">
-            <a href="#"><img src="images/Facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="images/Instagram.png" alt="Instagram"></a>
-            <a href="#"><img src="images/Twitter.png" alt="Twitter"></a>
+            <a href="#"><img src="../images/Facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="../images/Instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="../images/Twitter.png" alt="Twitter"></a>
         </div>
     </footer>
 
