--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile - ShopLuxe</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/profile.css">
     <script src="../js/profile.js" defer></script>
 </head>
 <body>
@@ -23,6 +25,8 @@
     <main>
         <h1>Your Profile</h1>
         <p>Email: <span id="user-email">Loading...</span></p>
+        <h2>Your Orders</h2>
+        <div id="user-orders">Loading your orders...</div>
     </main>
     <footer>
         <p>&copy; 2024 ShopLuxe. All Rights Reserved.</p>
