--- a/public/html/checkout.html
+++ b/public/html/checkout.html
@@ -6,7 +6,7 @@
     <title>Checkout - ShopLuxe</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/checkout.css">
+    <link rel="stylesheet" href="/public/css/checkout.css">
 </head>
 <body>
     <!-- Header -->
@@ -15,7 +15,7 @@
             <div class="logo"><i class="fas fa-store"></i> ShopLuxe</div>
             <ul class="nav-links">
                 <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="/html/cart.html"><i class="fas fa-shopping-cart"></i> Cart</a></li>
+                <li><a href="/public/html/cart.html"><i class="fas fa-shopping-cart"></i> Cart</a></li>
             </ul>
         </nav>
     </header>
@@ -56,6 +56,6 @@
         <p>&copy; 2024 ShopLuxe. All Rights Reserved.</p>
     </footer>
 
-    <script src="../js/checkout.js" defer></script>
+    <script src="/public/js/checkout.js" defer></script>
 </body>
 </html>
