--- a/public/html/index.html
+++ b/public/html/index.html
@@ -6,7 +6,7 @@
     <title>ShopLuxe - Home</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/public/css/style.css">
 </head>
 <body>
     <!-- Header -->
@@ -15,10 +15,10 @@
             <div class="logo"><i class="fas fa-store"></i> ShopLuxe</div>
             <ul class="nav-links">
                 <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="/html/products.html"><i class="fas fa-box-open"></i> Products</a></li>
-                <li><a href="/html/wishlist.html"><i class="fas fa-heart"></i> Wishlist</a></li>
-                <li><a href="/html/cart.html"><i class="fas fa-shopping-cart"></i> Cart</a></li>
-                <li id="auth-link"><a href="html/login.html"><i class="fas fa-user"></i> Login/Register</a></li>
+                <li><a href="/public/html/products.html"><i class="fas fa-box-open"></i> Products</a></li>
+                <li><a href="/public/html/wishlist.html"><i class="fas fa-heart"></i> Wishlist</a></li>
+                <li><a href="/public/html/cart.html"><i class="fas fa-shopping-cart"></i> Cart</a></li>
+                <li id="auth-link"><a href="/public/html/login.html"><i class="fas fa-user"></i> Login/Register</a></li>
             </ul>
         </nav>
     </header>
@@ -28,7 +28,7 @@
         <div class="hero-content">
             <h1>Welcome to ShopLuxe</h1>
             <p>Discover quality products at unbeatable prices.</p>
-            <a href="/html/products.html" class="cta">Shop Now</a>
+            <a href="/public/html/products.html" class="cta">Shop Now</a>
         </div>
     </section>
 
@@ -38,24 +38,24 @@
         <div class="products">
             <div class="product-card">
                 <span class="badge trending">Trending</span>
-                <img src="../images/laptop.webp" alt="Laptop">
+                <img src="/public/images/laptop.webp" alt="Laptop">
                 <h3>Laptop</h3>
                 <p>Price: $1000</p>
-                <a href="/html/product-details/laptop.html?productId=1&origin=home" class="btn">View Details</a>
+                <a href="/public/html/product-details/laptop.html?productId=1&origin=home" class="btn">View Details</a>
             </div>
             <div class="product-card">
                 <span class="badge trending">New</span>
-                <img src="../images/Headphones.webp" alt="Headphones">
+                <img src="/public/images/Headphones.webp" alt="Headphones">
                 <h3>Headphones</h3>
                 <p>Price: $300</p>
-                <a href="/html/product-details/headphones.html?productId=2&origin=home" class="btn">View Details</a>
+                <a href="/public/html/product-details/headphones.html?productId=2&origin=home" class="btn">View Details</a>
             </div>
             <div class="product-card">
                 <span class="badge trending">Trending</span>
-                <img src="../images/Phone.webp" alt="Smartphone">
+                <img src="/public/images/Phone.webp" alt="Smartphone">
                 <h3>Smartphone</h3>
                 <p>Price: $800</p>
-                <a href="/html/product-details/phone.html?productId=4&origin=home" class="btn">View Details</a>
+                <a href="/public/html/product-details/phone.html?productId=4&origin=home" class="btn">View Details</a>
             </div>
         </div>
     </section>
@@ -65,17 +65,17 @@
     <h2>Why Shop with Us?</h2>
     <div class="features">
         <div class="feature">
-            <img src="../images/Fast Shipping.png" alt="Fast Shipping">
+            <img src="/public/images/Fast Shipping.png" alt="Fast Shipping">
             <h3>Fast Shipping</h3>
             <p>Get your orders delivered quickly and efficiently.</p>
         </div>
         <div class="feature">
-            <img src="../images/Affordable pricing.png" alt="Affordable Pricing">
+            <img src="/public/images/Affordable pricing.png" alt="Affordable Pricing">
             <h3>Affordable Pricing</h3>
             <p>High-quality products at unbeatable prices.</p>
         </div>
         <div class="feature">
-            <img src="../images/High Quality.png" alt="High Quality">
+            <img src="/public/images/High Quality.png" alt="High Quality">
             <h3>Premium Quality</h3>
             <p>We ensure the best standards for every product.</p>
         </div>
@@ -86,13 +86,13 @@
     <footer>
         <p>&copy; 2024 ShopLuxe. All Rights Reserved.</p>
         <div class="socials">
-            <a href="#"><img src="../images/Facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="../images/Instagram.png" alt="Instagram"></a>
-            <a href="#"><img src="../images/Twitter.png" alt="Twitter"></a>
+            <a href="#"><img src="/public/images/Facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="/public/images/Instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="/public/images/Twitter.png" alt="Twitter"></a>
         </div>
     </footer>
 
     <!-- External JS for dynamic auth link -->
-    <script src="../js/nav.js"></script>
+    <script src="/public/js/nav.js"></script>
 </body>
 </html>
