--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -6,8 +6,8 @@
     <title>Profile - ShopLuxe</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/profile.css">
-    <script src="../js/profile.js" defer></script>
+    <link rel="stylesheet" href="/public/css/profile.css">
+    <script src="/public/js/profile.js" defer></script>
 </head>
 <body>
     <header>
@@ -15,9 +15,9 @@
             <div class="logo"><i class="fas fa-store"></i> ShopLuxe</div>
             <ul class="nav-links">
                 <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="/html/products.html"><i class="fas fa-box-open"></i> Products</a></li>
-                <li><a href="/html/wishlist.html"><i class="fas fa-heart"></i> Wishlist</a></li>
-                <li><a href="/html/cart.html"><i class="fas fa-shopping-cart"></i> Cart</a></li>
+                <li><a href="/public/html/products.html"><i class="fas fa-box-open"></i> Products</a></li>
+                <li><a href="/public/html/wishlist.html"><i class="fas fa-heart"></i> Wishlist</a></li>
+                <li><a href="/public/html/cart.html"><i class="fas fa-shopping-cart"></i> Cart</a></li>
                 <li><a id="logout-btn"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
             </ul>
         </nav>
