--- a/public/html/wishlist.html
+++ b/public/html/wishlist.html
@@ -6,7 +6,7 @@
     <title>Wishlist - ShopLuxe</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/wishlist.css">
+    <link rel="stylesheet" href="/public/css/wishlist.css">
 </head>
 <body>
     <!-- Header -->
@@ -14,11 +14,11 @@
         <nav>
             <div class="logo"><i class="fas fa-store"></i> ShopLuxe</div>
             <ul class="nav-links">
-                <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="products.html"><i class="fas fa-box-open"></i> Products</a></li>
-                <li><a href="wishlist.html" class="active"><i class="fas fa-heart"></i> Wishlist</a></li>
-                <li><a href="cart.html"><i class="fas fa-shopping-cart"></i> Cart</a></li>
-                <li id="auth-link"><a href="login.html"><i class="fas fa-user"></i> Login/Register</a></li>
+                <li><a href="/public/html/index.html"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="/public/html/products.html"><i class="fas fa-box-open"></i> Products</a></li>
+                <li><a href="/public/html/wishlist.html" class="active"><i class="fas fa-heart"></i> Wishlist</a></li>
+                <li><a href="/public/html/cart.html"><i class="fas fa-shopping-cart"></i> Cart</a></li>
+                <li id="auth-link"><a href="/public/html/login.html"><i class="fas fa-user"></i> Login/Register</a></li>
             </ul>
         </nav>
     </header>
@@ -37,7 +37,7 @@
     </footer>
 
     <!-- Include wishlist.js -->
-    <script src="../js/wishlist.js"></script>
-    <script src="../js/nav.js"></script>
+    <script src="/public/js/wishlist.js"></script>
+    <script src="/public/js/nav.js"></script>
 </body>
 </html>
