--- a/public/html/cart.html
+++ b/public/html/cart.html
@@ -6,7 +6,7 @@
     <title>Cart - ShopLuxe</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/cart.css">
+    <link rel="stylesheet" href="/public/css/cart.css">
 </head>
 <body>
     <!-- Header -->
@@ -14,11 +14,11 @@
         <nav>
             <div class="logo"><i class="fas fa-store"></i> ShopLuxe</div>
             <ul class="nav-links">
-                <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="products.html"><i class="fas fa-box-open"></i> Products</a></li>
-                <li><a href="wishlist.html"><i class="fas fa-heart"></i> Wishlist</a></li>
-                <li><a href="cart.html" class="active"><i class="fas fa-shopping-cart"></i> Cart</a></li>
-                <li id="auth-link"><a href="login.html"><i class="fas fa-user"></i> Login/Register</a></li>
+                <li><a href="/public/html/index.html"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="/public/html/products.html"><i class="fas fa-box-open"></i> Products</a></li>
+                <li><a href="/public/html/wishlist.html"><i class="fas fa-heart"></i> Wishlist</a></li>
+                <li><a href="/public/html/cart.html" class="active"><i class="fas fa-shopping-cart"></i> Cart</a></li>
+                <li id="auth-link"><a href="/public/html/login.html"><i class="fas fa-user"></i> Login/Register</a></li>
             </ul>
         </nav>
     </header>
@@ -38,7 +38,7 @@
                 <h2>Summary</h2>
                 <p>Total Items: <span id="total-items">0</span></p>
                 <p>Total Price: <span id="total-price">$0</span></p>
-                <a href="checkout.html" class="checkout-btn">Proceed to Checkout</a>
+                <a href="/public/html/checkout.html" class="checkout-btn">Proceed to Checkout</a>
             </div>
         </div>
     </main>
@@ -49,7 +49,7 @@
     </footer>
 
     <!-- Include JavaScript -->
-    <script src="../js/nav.js" defer></script>
-    <script src="../js/cart.js"></script>
+    <script src="/public/js/nav.js" defer></script>
+    <script src="/public/js/cart.js"></script>
 </body>
 </html>
