--- a/public/html/confirmation.html
+++ b/public/html/confirmation.html
@@ -6,7 +6,7 @@
     <title>Order Confirmation - ShopLuxe</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/confirmation.css">
+    <link rel="stylesheet" href="/public/css/confirmation.css">
 </head>
 <body>
     <header>
@@ -23,6 +23,6 @@
     <footer>
         <p>&copy; 2024 ShopLuxe. All Rights Reserved.</p>
     </footer>
-    <script src="../js/confirmation.js"></script>
+    <script src="/public/js/confirmation.js"></script>
 </body>
 </html>
