--- a/public/html/login.html
+++ b/public/html/login.html
@@ -6,10 +6,10 @@
     <title>Login - ShopLuxe</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="/public/css/login.css">
     <!-- JavaScript -->
-    <script src="../js/login.js"></script>
-    <script src="../js/password.js"></script>
+    <script src="/public/js/login.js"></script>
+    <script src="/public/js/password.js"></script>
 </head>
 <body>
     <!-- Back to Home -->
@@ -21,7 +21,7 @@
         <div class="login-form">
             <div class="logo">ShopLuxe</div>
             <h2>Login to Your Account</h2>
-            <form action="http://localhost:3000/auth/login" method="post">
+            <form action="/auth/login" method="post">
                 <input type="email" name="email" placeholder="Email" required>
                 <div class="password-field">
                     <input type="password" name="password" placeholder="Password" required>
@@ -33,7 +33,7 @@
         <div class="signup-prompt">
             <h3>New Here?</h3>
             <p>Sign up and discover a great amount of new opportunities!</p>
-            <a href="register.html" class="btn signup-btn">Sign Up</a>
+            <a href="/public/html/register.html" class="btn signup-btn">Sign Up</a>
         </div>
     </div>
 </body>
