--- a/public/html/product-details/laptop.html
+++ b/public/html/product-details/laptop.html
@@ -6,7 +6,7 @@
     <title>Laptop Details - ShopLuxe</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../css/product-details.css">
+    <link rel="stylesheet" href="/public/css/product-details.css">
 </head>
 <body>
     <header>
@@ -14,10 +14,10 @@
             <div class="logo"><i class="fas fa-store"></i> ShopLuxe</div>
             <ul class="nav-links">
                 <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="/html/products.html"><i class="fas fa-box-open"></i> Products</a></li>
-                <li><a href="../wishlist.html"><i class="fas fa-heart"></i> Wishlist</a></li>
-                <li><a href="/html/cart.html"><i class="fas fa-shopping-cart"></i> Cart</a></li>
-                <li id="auth-link"><a href="html/login.html"><i class="fas fa-user"></i> Login/Register</a></li>
+                <li><a href="/public/html/products.html"><i class="fas fa-box-open"></i> Products</a></li>
+                <li><a href="/public/html/wishlist.html"><i class="fas fa-heart"></i> Wishlist</a></li>
+                <li><a href="/public/html/cart.html"><i class="fas fa-shopping-cart"></i> Cart</a></li>
+                <li id="auth-link"><a href="/public/html/login.html"><i class="fas fa-user"></i> Login/Register</a></li>
             </ul>
         </nav>
     </header>
@@ -32,7 +32,7 @@
         <div class="product-details">
             <!-- Product Image -->
             <div class="product-image">
-                <img src="../../images/laptop.webp" alt="Laptop">
+                <img src="/public/images/laptop.webp" alt="Laptop">
             </div>
 
             <!-- Product Info -->
@@ -78,8 +78,8 @@
     </footer>
 
     <!-- Include the external JavaScript file -->
-<script src="../../js/product-details.js"></script>
-<script src="../../js/nav.js" defer></script>
+<script src="/public/js/product-details.js"></script>
+<script src="/public/js/nav.js" defer></script>
 
 </body>
 </html>
