--- a/public/html/products.html
+++ b/public/html/products.html
@@ -6,7 +6,7 @@
     <title>Products - ShopLuxe</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/products.css">
+    <link rel="stylesheet" href="/public/css/products.css">
 </head>
 <body>
     <!-- Header -->
@@ -15,10 +15,10 @@
             <div class="logo"><i class="fas fa-store"></i> ShopLuxe</div>
             <ul class="nav-links">
                 <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
-                <li><a href="/html/products.html" class="active"><i class="fas fa-box-open"></i> Products</a></li>
-                <li><a href="/html/wishlist.html"><i class="fas fa-heart"></i> Wishlist</a></li>
-                <li><a href="/html/cart.html"><i class="fas fa-shopping-cart"></i> Cart</a></li>
-                <li id="auth-link"><a href="html/login.html"><i class="fas fa-user"></i> Login/Register</a></li>
+                <li><a href="/public/html/products.html" class="active"><i class="fas fa-box-open"></i> Products</a></li>
+                <li><a href="/public/html/wishlist.html"><i class="fas fa-heart"></i> Wishlist</a></li>
+                <li><a href="/public/html/cart.html"><i class="fas fa-shopping-cart"></i> Cart</a></li>
+                <li id="auth-link"><a href="/public/html/login.html"><i class="fas fa-user"></i> Login/Register</a></li>
             </ul>
         </nav>
     </header>
@@ -39,84 +39,84 @@
             <!-- Electronics -->
             <div class="product-category electronics active">
                 <div class="product-card">
-                    <img src="../images/laptop.webp" alt="Laptop">
+                    <img src="/public/images/laptop.webp" alt="Laptop">
                     <h2>Laptop</h2>
                     <p>Price: $1000</p>
-                    <a href="/html/product-details/laptop.html?productId=1&category=electronics" class="btn">View Details</a>
+                    <a href="/public/html/product-details/laptop.html?productId=1&category=electronics" class="btn">View Details</a>
                 </div>
                 <div class="product-card">
-                    <img src="../images/headphones.webp" alt="Headphones">
+                    <img src="/public/images/headphones.webp" alt="Headphones">
                     <h2>Headphones</h2>
                     <p>Price: $300</p>
-                    <a href="/html/product-details/headphones.html?productId=2&category=electronics" class="btn">View Details</a>
+                    <a href="/public/html/product-details/headphones.html?productId=2&category=electronics" class="btn">View Details</a>
                 </div>
                 <div class="product-card">
-                    <img src="../images/Ipad.webp" alt="Tablet">
+                    <img src="/public/images/Ipad.webp" alt="Tablet">
                     <h2>Ipad</h2>
                     <p>Price: $400</p>
-                    <a href="/html/product-details/ipad.html?productId=3&category=electronics" class="btn">View Details</a>
+                    <a href="/public/html/product-details/ipad.html?productId=3&category=electronics" class="btn">View Details</a>
                 </div>
                 <div class="product-card">
-                    <img src="../images/Phone.webp" alt="Smartphone">
+                    <img src="/public/images/Phone.webp" alt="Smartphone">
                     <h2>Smartphone</h2>
                     <p>Price: $800</p>
-                    <a href="/html/product-details/phone.html?productId=4&category=electronics" class="btn">View Details</a>
+                    <a href="/public/html/product-details/phone.html?productId=4&category=electronics" class="btn">View Details</a>
                 </div>
                 <div class="product-card">
-                    <img src="../images/smartwatch.webp" alt="Smartwatch">
+                    <img src="/public/images/smartwatch.webp" alt="Smartwatch">
                     <h2>Smartwatch</h2>
                     <p>Price: $150</p>
-                    <a href="/html/product-details/smartwatch.html?productId=5&category=electronics" class="btn">View Details</a>
+                    <a href="/public/html/product-details/smartwatch.html?productId=5&category=electronics" class="btn">View Details</a>
                 </div>
             </div>
 
             <!-- Fashion -->
             <div class="product-category fashion">
                 <div class="product-card">
-                    <img src="../images/hoodie.webp" alt="Hoodie">
+                    <img src="/public/images/hoodie.webp" alt="Hoodie">
                     <h2>Hoodie</h2>
                     <p>Price: $50</p>
-                    <a href="/html/product-details/hoodie.html?productId=6&category=fashion" class="btn">View Details</a>
+                    <a href="/public/html/product-details/hoodie.html?productId=6&category=fashion" class="btn">View Details</a>
                 </div>
                 <div class="product-card">
-                    <img src="../images/Sneakers.webp" alt="Shoes">
+                    <img src="/public/images/Sneakers.webp" alt="Shoes">
                     <h2>Sneakers</h2>
                     <p>Price: $120</p>
-                    <a href="/html/product-details/sneakers.html?productId=7&category=fashion" class="btn">View Details</a>
+                    <a href="/public/html/product-details/sneakers.html?productId=7&category=fashion" class="btn">View Details</a>
                 </div>
                 <div class="product-card">
-                    <img src="../images/jacket.webp" alt="Jacket">
+                    <img src="/public/images/jacket.webp" alt="Jacket">
                     <h2>Jacket</h2>
                     <p>Price: $200</p>
-                    <a href="/html/product-details/Jacket.html?productId=8&category=fashion" class="btn">View Details</a>
+                    <a href="/public/html/product-details/Jacket.html?productId=8&category=fashion" class="btn">View Details</a>
                 </div>
                 <div class="product-card">
-                    <img src="../images/Sunglasses.webp" alt="Sunglasses">
+                    <img src="/public/images/Sunglasses.webp" alt="Sunglasses">
                     <h2>Sunglasses</h2>
                     <p>Price: $100</p>
-                    <a href="/html/product-details/sunglasses.html?productId=9&category=fashion" class="btn">View Details</a>
+                    <a href="/public/html/product-details/sunglasses.html?productId=9&category=fashion" class="btn">View Details</a>
                 </div>
             </div>
 
             <!-- Travel -->
             <div class="product-category home-appliances">
                 <div class="product-card">
-                    <img src="../images/Bagpack.webp" alt="Backpack">
+                    <img src="/public/images/Bagpack.webp" alt="Backpack">
                     <h2>Backpack</h2>
                     <p>Price: $75</p>
-                    <a href="/html/product-details/bagpack.html?productId=10&category=home-appliances" class="btn">View Details</a>
+                    <a href="/public/html/product-details/bagpack.html?productId=10&category=home-appliances" class="btn">View Details</a>
                 </div>
                 <div class="product-card">
-                    <img src="../images/Camera.webp" alt="Camera">
+                    <img src="/public/images/Camera.webp" alt="Camera">
                     <h2>Camera</h2>
                     <p>Price: $500</p>
-                    <a href="/html/product-details/camera.html?productId=11&category=home-appliances" class="btn">View Details</a>
+                    <a href="/public/html/product-details/camera.html?productId=11&category=home-appliances" class="btn">View Details</a>
                 </div>
                 <div class="product-card">
-                    <img src="../images/water-bottle.webp" alt="Water Bottle">
+                    <img src="/public/images/water-bottle.webp" alt="Water Bottle">
                     <h2>Water Bottle</h2>
                     <p>Price: $25</p>
-                    <a href="/html/product-details/water-bottle.html?productId=12&category=home-appliances" class="btn">View Details</a>
+                    <a href="/public/html/product-details/water-bottle.html?productId=12&category=home-appliances" class="btn">View Details</a>
                 </div>
             </div>
         </div>
@@ -128,7 +128,7 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="../js/products.js"></script>
-    <script src="../js/nav.js" defer></script> <!-- Include nav.js -->
+    <script src="/public/js/products.js"></script>
+    <script src="/public/js/nav.js" defer></script> <!-- Include nav.js -->
 </body>
 </html>
