--- a/public/html/register.html
+++ b/public/html/register.html
@@ -6,8 +6,8 @@
     <title>Register - ShopLuxe</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/register.css">
-    <script src="../js/password.js"></script>
+    <link rel="stylesheet" href="/public/css/register.css">
+    <script src="/public/js/password.js"></script>
 </head>
 <body>
     <!-- Back to Home -->
@@ -17,7 +17,7 @@
     <div class="register-container">
         <div class="register-form">
             <h1>Create an Account</h1>
-            <form action="http://localhost:3000/auth/register" method="post">
+            <form action="/auth/register" method="post">
                 <input type="email" name="email" placeholder="Email" required>
                 <div class="password-field">
                     <input type="password" name="password" placeholder="Password" required>
@@ -25,7 +25,7 @@
                 </div>
                 <button type="submit">Register</button>
             </form>
-            <p>Already have an account? <a href="login.html">Login here</a></p>
+            <p>Already have an account? <a href="/public/html/login.html">Login here</a></p>
         </div>
     </div>
 </body>
